test/corpus/btest
================================================================================
alternative
================================================================================

@TEST-ALTERNATIVE: alt
--------------------------------------------------------------------------------

(source_file
  (alternative
    (string)))

================================================================================
copy-file
================================================================================

@TEST-COPY-FILE: file
--------------------------------------------------------------------------------

(source_file
  (copy_file
    (string)))

================================================================================
doc
================================================================================

@TEST-DOC: docstring
--------------------------------------------------------------------------------

(source_file
  (doc
    (string)))

================================================================================
exec
================================================================================

@TEST-EXEC: false
--------------------------------------------------------------------------------

(source_file
  (exec
    (sh)))

================================================================================
exec-fail
================================================================================

@TEST-EXEC-FAIL: true
--------------------------------------------------------------------------------

(source_file
  (exec_fail
    (sh)))

================================================================================
group
================================================================================

@TEST-GROUP: group
--------------------------------------------------------------------------------

(source_file
  (group
    (string)))

================================================================================
not-alternative
================================================================================

@TEST-NOT-ALTERNATIVE: alt
--------------------------------------------------------------------------------

(source_file
  (not_alternative
    (string)))

================================================================================
port
================================================================================

@TEST-PORT: ENV_VAR
--------------------------------------------------------------------------------

(source_file
  (port
    (string)))

================================================================================
requires
================================================================================

@TEST-REQUIRES: true
--------------------------------------------------------------------------------

(source_file
  (requires
    (sh)))

================================================================================
serialize
================================================================================

@TEST-SERIALIZE: set
--------------------------------------------------------------------------------

(source_file
  (serialize
    (string)))

================================================================================
start-next
================================================================================

@TEST-START-NEXT
--------------------------------------------------------------------------------

(source_file
  (start_next
    (string)))

================================================================================
start-file
================================================================================

@TEST-START-FILE file.zeek
@TEST-END-FILE
--------------------------------------------------------------------------------

(source_file
  (start_file
    (string))
  (end_file))
